--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exercício</title>
-  </head>
-  <body>
-    <p>Commitando no Github</p>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
+</head>
+<body>
+    
+
+    <!-- <div class="div-1">
+        <h1>Sou a div 1</h1>
+    </div>
+
+    <div class="div-2">
+        <h1>Sou a div 2</h1>
+    </div> -->
+
+<script src="./js/utils.js"></script>
+<script src="./js/exemplo.js"></script>
+
+</body>
 </html>
