--- a/desafio2.html
+++ b/desafio2.html
@@ -12,7 +12,7 @@
       var aliquota = ['0.075', '0.15', '0.225', '0.275'];
       var deducao = ['142.80', '345.80', '636.13', '869.36'];
 
-      function calcDependente(dependente) {
+      function calcDependente() {
         return dependente * 189.59;
       }
 
